// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NOT_FOUND 1`] = `
Object {
  "location": Object {
    "basename": undefined,
    "url": "/cat",
  },
  "payload": Object {
    "foo": "bar",
  },
  "type": "SCENE/@@rudy/NOT_FOUND",
}
`;

exports[`NOT_FOUND 2`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/cat",
      "search": "",
      "state": Object {},
      "url": "/cat",
    },
  ],
  "hasSSR": undefined,
  "hash": "",
  "index": 1,
  "kind": "push",
  "length": 2,
  "pathname": "/cat",
  "payload": Object {
    "foo": "bar",
  },
  "prev": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": undefined,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/first",
    "payload": Object {},
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "type": "SCENE/FIRST",
    "url": "/first",
  },
  "query": Object {},
  "scene": "SCENE",
  "search": "",
  "state": Object {},
  "type": "SCENE/@@rudy/NOT_FOUND",
  "url": "/cat",
}
`;

exports[`createScene 1`] = `
Object {
  "FIRST": "SCENE/FIRST",
  "FIRST_COMPLETE": "SCENE/FIRST/@@rudy/COMPLETE",
  "FIRST_ERROR": "SCENE/FIRST/@@rudy/ERROR",
  "FOURTH": "SCENE/FOURTH",
  "FOURTH_COMPLETE": "SCENE/FOURTH/@@rudy/COMPLETE",
  "FOURTH_ERROR": "SCENE/FOURTH/@@rudy/ERROR",
  "NOT_FOUND": "SCENE/@@rudy/NOT_FOUND",
  "NOT_FOUND_COMPLETE": "SCENE/@@rudy/NOT_FOUND/@@rudy/COMPLETE",
  "NOT_FOUND_ERROR": "SCENE/@@rudy/NOT_FOUND/@@rudy/ERROR",
  "PLAIN": "SCENE/PLAIN",
  "PLAIN_COMPLETE": "SCENE/PLAIN/@@rudy/COMPLETE",
  "PLAIN_ERROR": "SCENE/PLAIN/@@rudy/ERROR",
  "SECOND": "SCENE/SECOND",
  "SECOND_COMPLETE": "SCENE/SECOND/@@rudy/COMPLETE",
  "SECOND_ERROR": "SCENE/SECOND/@@rudy/ERROR",
  "THIRD": "SCENE/THIRD",
  "THIRD_COMPLETE": "SCENE/THIRD/@@rudy/COMPLETE",
  "THIRD_ERROR": "SCENE/THIRD/@@rudy/ERROR",
}
`;

exports[`createScene 2`] = `
Object {
  "first": [Function],
  "fourth": [Function],
  "notFound": [Function],
  "plain": [Function],
  "second": [Function],
  "third": [Function],
}
`;

exports[`createScene 3`] = `
"const { types, actions } = createScene(routes, { scene: 'SCENE' })

const { 
	FIRST,
	FIRST_COMPLETE,
	FIRST_ERROR,
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR
} = types

const { 
	first,
	second,
	third,
	fourth,
	plain,
	notFound
} = actions

export {
	FIRST,
	FIRST_COMPLETE,
	FIRST_ERROR,
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR
}

export {
	first,
	second,
	third,
	fourth,
	plain,
	notFound
}"
`;

exports[`double createScene 1`] = `
Object {
  "FIRST": "double/scene/FIRST",
  "FIRST_COMPLETE": "double/scene/FIRST/@@rudy/COMPLETE",
  "FIRST_ERROR": "double/scene/FIRST/@@rudy/ERROR",
  "FOURTH": "double/scene/FOURTH",
  "FOURTH_COMPLETE": "double/scene/FOURTH/@@rudy/COMPLETE",
  "FOURTH_ERROR": "double/scene/FOURTH/@@rudy/ERROR",
  "NOT_FOUND": "double/scene/@@rudy/NOT_FOUND",
  "NOT_FOUND_COMPLETE": "double/scene/@@rudy/NOT_FOUND/@@rudy/COMPLETE",
  "NOT_FOUND_ERROR": "double/scene/@@rudy/NOT_FOUND/@@rudy/ERROR",
  "PLAIN": "double/scene/PLAIN",
  "PLAIN_COMPLETE": "double/scene/PLAIN/@@rudy/COMPLETE",
  "PLAIN_ERROR": "double/scene/PLAIN/@@rudy/ERROR",
  "SECOND": "double/scene/SECOND",
  "SECOND_COMPLETE": "double/scene/SECOND/@@rudy/COMPLETE",
  "SECOND_ERROR": "double/scene/SECOND/@@rudy/ERROR",
  "THIRD": "double/scene/THIRD",
  "THIRD_COMPLETE": "double/scene/THIRD/@@rudy/COMPLETE",
  "THIRD_ERROR": "double/scene/THIRD/@@rudy/ERROR",
}
`;

exports[`double createScene 2`] = `
Object {
  "first": [Function],
  "fourth": [Function],
  "notFound": [Function],
  "plain": [Function],
  "second": [Function],
  "third": [Function],
}
`;

exports[`double createScene 3`] = `
Object {
  "@@rudy/NOT_FOUND": Object {
    "path": "/not-found",
    "type": "@@rudy/NOT_FOUND",
  },
  "double/scene/@@rudy/NOT_FOUND": Object {
    "path": "/not-found-foo",
    "scene": "double/scene",
    "type": "double/scene/@@rudy/NOT_FOUND",
  },
  "double/scene/FIRST": Object {
    "path": "/first",
    "scene": "double/scene",
    "type": "double/scene/FIRST",
  },
  "double/scene/FOURTH": Object {
    "action": [Function],
    "onComplete": [Function],
    "path": "/fourth",
    "scene": "double/scene",
    "thunk": [Function],
    "type": "double/scene/FOURTH",
  },
  "double/scene/PLAIN": Object {
    "action": [Function],
    "scene": "double/scene",
    "type": "double/scene/PLAIN",
  },
  "double/scene/SECOND": Object {
    "error": [Function],
    "path": "/second",
    "scene": "double/scene",
    "type": "double/scene/SECOND",
  },
  "double/scene/THIRD": Object {
    "action": Array [
      "",
      "customCreator",
    ],
    "customCreator": [Function],
    "path": "/third",
    "scene": "double/scene",
    "thunk": [Function],
    "type": "double/scene/THIRD",
  },
}
`;

exports[`double createScene 4`] = `
"const { types, actions } = createScene(routes, { scene: 'double/scene' })

const { 
	FIRST,
	FIRST_COMPLETE,
	FIRST_ERROR,
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR
} = types

const { 
	first,
	second,
	third,
	fourth,
	plain,
	notFound
} = actions

export {
	FIRST,
	FIRST_COMPLETE,
	FIRST_ERROR,
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR
}

export {
	first,
	second,
	third,
	fourth,
	plain,
	notFound
}"
`;
